spil virker, men enemy spawner ikke